Fixed adding city view

--- a/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/Base.lproj/Main.storyboard
@@ -51,7 +51,7 @@
                     <navigationItem key="navigationItem" title="Weather App" id="azK-OP-bFA">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="884-5U-Y4O">
                             <connections>
-                                <segue destination="0cL-K4-got" kind="show" id="KkY-QE-uSD"/>
+                                <action selector="addButtonTapped:" destination="5Cb-ly-BHN" id="U5g-vJ-l4H"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -67,7 +67,7 @@
         <!--Add City View Controller-->
         <scene sceneID="HiC-8p-Ox0">
             <objects>
-                <viewController id="0cL-K4-got" customClass="AddCityViewController" customModule="WeatherApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AddCityViewController" id="0cL-K4-got" customClass="AddCityViewController" customModule="WeatherApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zG4-NT-OH6">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -81,7 +81,7 @@
                                     <action selector="citySearchTextField:" destination="Jxj-8h-2Hw" eventType="editingDidEnd" id="fTI-kM-jv2"/>
                                 </connections>
                             </textField>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="XJa-ux-iAA">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="AddCityViewController" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="XJa-ux-iAA">
                                 <rect key="frame" x="0.0" y="114" width="375" height="664"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -126,7 +126,6 @@
                         <outlet property="addCityTextField" destination="6CJ-7g-aEb" id="i0k-ZA-boh"/>
                         <outlet property="findButton" destination="P3i-UN-OQm" id="fIu-Xn-QyJ"/>
                         <outlet property="tableView" destination="XJa-ux-iAA" id="psF-gN-98O"/>
-                        <segue destination="5Cb-ly-BHN" kind="show" identifier="FromQuerySeque" id="CyN-Vz-NeU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eCg-Ii-ifk" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -160,43 +159,43 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artur Siepietowski" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ICU-d3-PMY">
-                                <rect key="frame" x="118" y="59.000000000000007" width="139" height="20.333333333333336"/>
+                                <rect key="frame" x="118" y="103" width="139" height="20.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sunny" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rKn-zG-UxL">
-                                <rect key="frame" x="163.66666666666666" y="415.66666666666669" width="48" height="20.333333333333314"/>
+                                <rect key="frame" x="163.66666666666666" y="459.66666666666669" width="48" height="20.333333333333314"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wind velocity:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mNx-p0-1hF">
-                                <rect key="frame" x="40.000000000000007" y="531" width="115.66666666666669" height="30"/>
+                                <rect key="frame" x="40.000000000000007" y="575" width="115.66666666666669" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Max temp: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Swu-G9-9df">
-                                <rect key="frame" x="40.000000000000007" y="451" width="115.66666666666669" height="30"/>
+                                <rect key="frame" x="40.000000000000007" y="495" width="115.66666666666669" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Min temp:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yMA-Hi-hRq">
-                                <rect key="frame" x="40.000000000000007" y="491" width="115.66666666666669" height="30"/>
+                                <rect key="frame" x="40.000000000000007" y="535" width="115.66666666666669" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wind direction:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4J7-N2-57d">
-                                <rect key="frame" x="40.000000000000007" y="571" width="115.66666666666669" height="30"/>
+                                <rect key="frame" x="40.000000000000007" y="615" width="115.66666666666669" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="San Francisco" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xs7-Ac-LYt">
-                                <rect key="frame" x="131.66666666666666" y="89.333333333333329" width="112" height="20"/>
+                                <rect key="frame" x="131.66666666666666" y="133.33333333333334" width="112" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="YQl-Q9-ade"/>
                                 </constraints>
@@ -205,75 +204,75 @@
                                 <textInputTraits key="textInputTraits" textContentType="address-level2"/>
                             </textField>
                             <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="20℃" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sRt-hp-c9O">
-                                <rect key="frame" x="278" y="491" width="57" height="30"/>
+                                <rect key="frame" x="278" y="535" width="57" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="NE" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wh4-mm-d3P">
-                                <rect key="frame" x="278" y="531" width="57" height="30"/>
+                                <rect key="frame" x="278" y="575" width="57" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="2 m/s" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="90T-90-Mnb">
-                                <rect key="frame" x="278" y="571" width="57" height="30"/>
+                                <rect key="frame" x="278" y="615" width="57" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rainfall:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cmn-uM-zhK">
-                                <rect key="frame" x="40.000000000000007" y="611" width="115.66666666666669" height="30"/>
+                                <rect key="frame" x="40.000000000000007" y="655" width="115.66666666666669" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Air Pressure:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2MK-gj-5PJ">
-                                <rect key="frame" x="40.000000000000007" y="651" width="115.66666666666669" height="30"/>
+                                <rect key="frame" x="40.000000000000007" y="695" width="115.66666666666669" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="NE" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tKO-kn-VfK">
-                                <rect key="frame" x="278" y="651" width="57" height="30"/>
+                                <rect key="frame" x="278" y="695" width="57" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z1p-L3-9gx">
-                                <rect key="frame" x="231.66666666666666" y="691" width="31.999999999999972" height="77"/>
+                                <rect key="frame" x="231.66666666666666" y="735" width="31.999999999999972" height="33"/>
                                 <state key="normal" title="Next"/>
                                 <connections>
                                     <action selector="nextDate:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eeV-Pl-4hv"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PBP-fY-aAX">
-                                <rect key="frame" x="112" y="691" width="31" height="77"/>
+                                <rect key="frame" x="112" y="735" width="31" height="33"/>
                                 <state key="normal" title="Prev"/>
                                 <connections>
                                     <action selector="prevDate:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nWq-vs-Nx5"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gWS-Bp-gee">
-                                <rect key="frame" x="169.66666666666666" y="119.33333333333333" width="36" height="20.333333333333329"/>
+                                <rect key="frame" x="169.66666666666666" y="163.33333333333334" width="36" height="20.333333333333343"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="20℃" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Het-YL-blt">
-                                <rect key="frame" x="278" y="451" width="57" height="30"/>
+                                <rect key="frame" x="278" y="495" width="57" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uMI-NT-zB5">
-                                <rect key="frame" x="20" y="154.66666666666663" width="335" height="246"/>
+                                <rect key="frame" x="20" y="198.66666666666663" width="335" height="246"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="246" id="Njs-Iv-wfs"/>
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="NE" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IC6-yf-8lo">
-                                <rect key="frame" x="278" y="611" width="57" height="30"/>
+                                <rect key="frame" x="278" y="655" width="57" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -386,8 +385,4 @@
             <point key="canvasLocation" x="973.60000000000002" y="-506.1576354679803"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="KkY-QE-uSD"/>
-        <segue reference="CyN-Vz-NeU"/>
-    </inferredMetricsTieBreakers>
 </document>
